--- a/mockup/css/base.css
+++ b/mockup/css/base.css
@@ -1,11 +1,11 @@
-body { background:#efe; font:100% Helvetica, Arial, sans-serif; padding-top:50px; }
+body { background:#ff0000; background-image:url('00.png'); font:100% Helvetica, Arial, sans-serif; padding-top:50px; }
 
-h1 { color:#fff; }
+h1, h2 { color:#fff; }
 
 #container { margin:0 auto; width:570px; }
 
 #search_box { 
-	background:-moz-linear-gradient(top, #ffd73a, #ffa500); 
+	background:-moz-linear-gradient(top, #E8D740, #EAD944); 
 	background:-webkit-gradient(linear, 0 0, 0 100%, from(#ffd73a), to(#ffa500)); 
 	border:1px solid #d28703; 
 	border-radius:5px; 
@@ -31,21 +31,3 @@ h1 { color:#fff; }
 
 #search_box input,
 #search_box input:focus { border:none; color:#333; outline:none; font:bold 24px Helvetica, Arial, sans-serif; margin:12px 0; width:510px; }
-#search_box button {
-	background:-moz-linear-gradient(top, #453e26, #000);
-	background:-webkit-gradient(linear, 0 0, 0 100%, from(#453e26), to(#000));
-	border:1px solid #000;
-	-moz-border-radius:2px;
-	-webkit-border-radius:2px;
-	-moz-box-shadow:inset 0 -2px 3px #193544, inset 0 1px #907817, 0 1px 1px rgba(0,0,0,4);
-	-webkit-box-shadow:inset 0 -2px 3px #193544, inset 0 1px #907817, 0 1px 1px rgba(0,0,0,.4);
-	cursor:pointer;
-	height:45px; 
-	position:absolute; 
-	right:2px; 
-	top:2px; 
-	width:45px;
-}
-
-h1 { margin-bottom:0; }
-.read_article { color:#fff; display:block; font-size:12px; margin-bottom:30px; }
