--- a/mockup/css/base.css
+++ b/mockup/css/base.css
@@ -1,4 +1,4 @@
-body { background:#ff0000; background-image:url('00.png'); font:100% Helvetica, Arial, sans-serif; padding-top:50px; }
+body { background-image:url('00.png'); font:100% Helvetica, Arial, sans-serif; padding-top:50px; }
 
 h1, h2 { color:#fff; }
 
@@ -31,3 +31,7 @@ h1, h2 { color:#fff; }
 
 #search_box input,
 #search_box input:focus { border:none; color:#333; outline:none; font:bold 24px Helvetica, Arial, sans-serif; margin:12px 0; width:510px; }
+
+#text_view {
+  visibility: none
+}
