minor edits, copy+paste geocoder

--- a/treestump/frontend/templates/index.html
+++ b/treestump/frontend/templates/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+ <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyB-4nNRrD5Z1wLdD1YUw8buAcHRCXGPWrA&sensor=true"></script>
  <script type="text/javascript" src="static/js/jquery-1.7.1.min.js" ></script>
  <script type="text/javascript" src="static/js/base.js" ></script>
  <link rel="stylesheet" type="text/css" href="static/css/base.css">
