updated slideshow to loop through data and slide to new divs

--- a/treestump/frontend/templates/slideshow.html
+++ b/treestump/frontend/templates/slideshow.html
@@ -21,18 +21,26 @@
 <h1>AngelHack @ Cambridge Innovation Center</h1>
 </div>
 
-<div class="image-view panel">
-<div class="image">what
-  <img src="http://distilleryimage7.instagram.com/3e917a22654b11e180c9123138016265_7.jpg"/>
+<div id="1" class="image-view panel">
+<div class="image">
+<img src="http://distilleryimage7.instagram.com/3e917a22654b11e180c9123138016265_7.jpg"/>
+</div>
 </div>
 
+<div id="2" class="text-view panel">
+  <div class="tweet">
+<div class="icon"><img src="https://twimg0-a.akamaihd.net/profile_images/1869921218/RelatedRiver_Logo_normal.jpg"/></div>
+  <div class="tweet-content">
+    <div class="name">RelatedRiver</div>
+    <div class="username">@RelatedRiver</div>
+    <div class="time">2m</div>
+<br class="clear"/>
+    <div>Notes from the floor (and we have some down there) gigaom.com/2012/03/03/ang… via @GigaBarb #AngelHack #Boston</div>
+  </div>
+  <br class="clear"/>
+  </div>
 </div>
 
-<div class="image-view2 panel">
-<div class="image">hi
-  <img src="http://distilleryimage7.instagram.com/3e917a22654b11e180c9123138016265_7.jpg"/>
-</div>
-</div>
 
   </body>
 </html>
