--- a/treestump/frontend/static/css/slideshow.css
+++ b/treestump/frontend/static/css/slideshow.css
@@ -57,7 +57,7 @@ height: 400px;
 /*width:100%;*/
 }
 
-.image-view, .image-view2 {
+.image-view, .image-view, .text-view {
 position: absolute;
 width: 100%;
 }
