--- a/mockup/css/views.css
+++ b/mockup/css/views.css
@@ -22,8 +22,9 @@ img {
 }
 
 #icon img {
-  top: 0;
-  left: 0;
+  position: absolute;
+  bottom: 0;
+  right: 0;
   width: 120px;
   padding: 10 10 10 10;
 }
@@ -37,11 +38,13 @@ img {
   background-color: #000000;
   position: absolute;
   top: 0px;
-  left: 170px;
+  left: 0px;
+  height: 100px;
+  width: 100%;
 }
 
 .text_view {
-  background-color: #FF00FF;
+  background-color: #802080;
   opacity: 0.6;
   padding: 0 0 0 0;
   margin: 10 10 10 10;
@@ -51,8 +54,15 @@ img {
   position: relative;
 }
 
-.photo_view {
+#background_photo_holder {
   position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.photo_view {
+  float: left;
   top: 0;
   left: 0;
   z-index: -1;
