--- a/mockup/css/views.css
+++ b/mockup/css/views.css
@@ -29,17 +29,17 @@ img {
   padding: 10 10 10 10;
 }
 
-.header {
-  background-color: #000000;
-}
-
-#headline h2 {
+#headline {
   color: #ffffff;
   background-color: #000000;
   position: absolute;
   top: 0px;
   left: 0px;
-  height: 100px;
+  height: 190px;
+  width: 100%;
+}
+
+.text_view img {
   width: 100%;
 }
 
@@ -49,7 +49,7 @@ img {
   padding: 0 0 0 0;
   margin: 10 10 10 10;
   box-shadow: 10px 10px 5px #FFFFFF;
-  width: 400px;
+  width: 20%;
   float: left;
   position: relative;
 }
@@ -59,6 +59,7 @@ img {
   top: 0;
   left: 0;
   z-index: -1;
+  visibility: hidden;
 }
 
 .photo_view {
@@ -68,7 +69,7 @@ img {
   z-index: -1;
 }
 
-h1, h2, h3, h4 { color: #F0F0F0; padding: 10 0 10 30;}
+h1, h2, h3, h4, h5 { color: #F0F0F0; padding: 10 10 10 30;}
 h1 { font-size: 72px; }
 h2 { font-size: 48px; }
 h3 { font-size: 32px; }
