copied stuff from mockup to frontend

--- a/treestump/frontend/templates/index.html
+++ b/treestump/frontend/templates/index.html
@@ -10,7 +10,7 @@
   <form id="search_box" action="/views">
     <div class="wrapper">
       <input type="text" id="search" name="search" placeholder="Enter in New Location" />
-      <button type="submit" class="search_btn"><img src="static/artwork/search_icon.png" title="Search" /></button>
+     <!-- <button type="submit" class="search_btn"><img src="static/artwork/search_icon.png" title="Search" /></button> -->
     </div>
   </form>
 </div>
