--- a/treestump/frontend/static/css/base.css
+++ b/treestump/frontend/static/css/base.css
@@ -1,4 +1,8 @@
-body { background-image:url('00.png'); font:100% Helvetica, Arial, sans-serif; padding-top:50px; }
+body {
+  background-image:url('/static/artwork/background.png');
+  font:100% Helvetica, Arial, sans-serif;
+  padding-top:50px;
+}
 
 h1, h2 { color:#fff; }
 
@@ -30,7 +34,14 @@ h1, h2 { color:#fff; }
 }
 
 #search_box input,
-#search_box input:focus { border:none; color:#333; outline:none; font:bold 24px Helvetica, Arial, sans-serif; margin:12px 0; width:510px; }
+#search_box input:focus {
+  border:none;
+  color:#333;
+  outline:none;
+  font:bold 24px Helvetica, Arial, sans-serif;
+  margin:12px 0;
+  width:510px;
+}
 
 #text_view {
   visibility: none
