--- a/treestump/frontend/templates/views.html
+++ b/treestump/frontend/templates/views.html
@@ -7,7 +7,7 @@
 
  <script type="text/javascript">
   $(document).ready(function() {
-    start_fetching({% searchkey %});
+    start_fetching("{{ searchkey }}");
   });
  </script>
 </head>
