--- a/treestump/frontend/templates/views.html
+++ b/treestump/frontend/templates/views.html
@@ -33,6 +33,7 @@
     <h3>This is just a text, you know like a tweet</h3>
   </div>
 </div>
+<div id="output"></div>
 <div id="background-text">
 This is just a shitload of text In publishing and graphic design, lorem ipsum[1] is placeholder text (filler text) commonly used to demonstrate the graphics elements of a document or visual presentation, such as font, typography, and layout. The lorem ipsum text is typically a section of a Latin text by Cicero with words altered, added and removed that make it nonsensical in meaning and not proper Latin.[1]
 This is just a shitload of text In publishing and graphic design, lorem ipsum[1] is placeholder text (filler text) commonly used to demonstrate the graphics elements of a document or visual presentation, such as font, typography, and layout. The lorem ipsum text is typically a section of a Latin text by Cicero with words altered, added and removed that make it nonsensical in meaning and not proper Latin.[1]
