--- a/treestump/frontend/static/css/views.css
+++ b/treestump/frontend/static/css/views.css
@@ -78,3 +78,4 @@ h1, h2, h3, h4, h5 {
 h1 { font-size: 72px; }
 h2 { font-size: 48px; }
 h3 { font-size: 32px; }
+h4 { font-size: 20px; padding: 5 }
