--- a/treestump/frontend/static/css/views.css
+++ b/treestump/frontend/static/css/views.css
@@ -67,9 +67,9 @@ img {
 
 h1, h2, h3, h4, h5 {
   color: #F0F0F0;
-  padding: 10 10 10 30;
+  padding: 10 10 10 10;
 }
 h1 { font-size: 72px; }
-h2 { font-size: 48px; }
-h3 { font-size: 32px; }
+h2 { font-size: 32px; padding-left: 20 }
+h3 { font-size: 20px; padding-left: 20 }
 h4 { font-size: 20px; padding: 5 }
