--- a/treestump/frontend/templates/views.html
+++ b/treestump/frontend/templates/views.html
@@ -13,10 +13,10 @@
 </head>
 <body>
   <div id="headline">
-    <h4>Cambridge, MA</h4>
-    <h3>Angel Hackathon Wows the Kendall Square Clientele</h3>
+    <h3>Cambridge, MA</h3>
+    <h2>Angel Hackathon Wows the Kendall Square Clientele</h2>
   </div>
-  <div id="icon"><img src="static/artwork/treeship.png"></div>
+  <!--<div id="icon"><img src="static/artwork/treeship.png"></div>-->
 <div id = "overlayB">
 </div>
 <div id="background-text">
