--- a/treestump/frontend/static/css/views.css
+++ b/treestump/frontend/static/css/views.css
@@ -11,7 +11,7 @@ body {
   left: 0px;
   text-align: justify;
   color: #777;
-  font-size: 34px;
+  font-size: 25px;
   z-index: -1;
 }
 
@@ -31,7 +31,7 @@ img {
   bottom: 0;
   right: 0;
   width: 120px;
-  padding: 10 10 10 10;
+  padding: 10px;
 }
 
 #headline {
@@ -48,10 +48,10 @@ img {
 .text_view {
   background-color: #802080;
   opacity: 0.9;
-  padding: 0 0 0 0;
-  margin: 10 10 10 10;
+  padding: 0px;
+  margin: 10px;
   box-shadow: 10px 10px 5px #FFFFFF;
-  width: 20%;
+  width: 15%;
   float: left;
   position: relative;
 }
@@ -73,9 +73,10 @@ img {
 
 h1, h2, h3, h4, h5 {
   color: #F0F0F0;
-  padding: 10 10 10 10;
+  padding: 10px;
+  margin: 0px;
 }
 h1 { font-size: 72px; }
-h2 { font-size: 32px; padding: 40 }
-h3 { font-size: 20px; padding-left: 20 }
-h4 { font-size: 20px; padding: 5 }
+h2 { font-size: 32px; padding: 40px }
+h3 { font-size: 20px; padding-left: 20px }
+h4 { font-size: 20px; padding: 10px }
